--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Home/Index.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Home/Index.cshtml
@@ -19,7 +19,7 @@
 <div class="row">
 	<div class="col-md-4">
 		@*describes what our webapp will be used for and how to contact us*@
-		<h2>Desciption</h2>
+		<h2>Description</h2>
 		<p>
 			We have compiled a database of existing patients and have created a comparison algorithm to analyze patterns between certain variables involved in each patients condition and the effects on the success rate of a variety of treatments. We have also created a user interface that allows users to login or register to gain access to the database showing them the conclusions of our comparison algorithm, as well as allow them to input information regarding a specific patient and receive both a computative analysis of the patients conditions and a recommended course of action calculated using the database.
 		</p>
