--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Results.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Results.cshtml
@@ -100,346 +100,379 @@
 
 @if (User.Identity.IsAuthenticated && (ViewBag.displayMenu == "Yes" || Model.userName == User.Identity.GetUserName()))
 {
-    <div>
-        <h2>Patient Comparison Results</h2>
-        <hr />
-        <h4>
-            Results:
-        </h4>
-        We recommend the following treatments:
-        @Html.DisplayFor(i => i.comparisonResults)
-        &nbsp;&nbsp;@ViewBag.TargetData[0]
-        @*Chart Printed Out on Results Page Showing the Current Patient's Level of Similarity to Other Patients in the Database*@
-        <div id="chartdiv" style="width: 100%; height: 400px; background-color: #FFFFFF;"></div>
+<div>
+	<h2>Patient Comparison Results</h2>
+	<hr />
+	<h4>
+		Results:
+	</h4>
+	We recommend the following treatments:
+	@Html.DisplayFor(i => i.comparisonResults)
+	&nbsp;&nbsp;@ViewBag.TargetData[0]
+	@*Chart Printed Out on Results Page Showing the Current Patient's Level of Similarity to Other Patients in the Database*@
+	<div id="chartdiv" style="width: 100%; height: 400px; background-color: #FFFFFF;"></div>
 
-        @*Data is based on a statistical correlation with: Patient @target.patientID | @targetSimilarity | @targetEffect*@
-        <hr />
-        <div class="row">
-            <div class="col-md-6">
-                <dl class="dl-horizontal">
-                    <dt>
-                        Patient  Info
-                    </dt>
-                    <dd>
-                        ------------------------------
-                    </dd>
-                    <dt>
-                        @Html.DisplayNameFor(model => model.Sex)
-                    </dt>
 
-                    <dd>
-                        @Html.DisplayFor(model => model.Sex)
-                    </dd>
 
-                    <dt>
-                        @Html.DisplayNameFor(model => model.Married)
-                    </dt>
 
-                    <dd>
-                        @Html.DisplayFor(model => model.Married)
-                    </dd>
 
-                    <dt>
-                        @Html.DisplayNameFor(model => model.Age)
-                    </dt>
 
-                    <dd>
-                        @Html.DisplayFor(model => model.Age)
-                    </dd>
 
-                    <dt>
-                        Classification
-                    </dt>
 
-                    <dd>
-                        @Html.DisplayFor(model => model.HistologicalClassification)
-                    </dd>
+	@*go through each variable and if index in the array of that variable is similar, highlight variable when printed out*@
+	@*highlight variables that are similar, otherwise print out not highlighted
+		if (record[1] == 1)
+		{
+			<p style="background-color: #FFFF00"> model.Sex </p>
+		}
+		else
+		{
+			@Html.DisplayNameFor(model => model.Sex)
+		}
+	*@
 
-                    <dt>
-                        Grade (WHO)
-                    </dt>
 
-                    <dd>
-                        @Html.DisplayFor(model => model.HistologicalGrade)
-                    </dd>
 
-                    <dt>
-                        Tumor Size (WxHxL)
-                    </dt>
 
-                    <dd>
-                        @Html.DisplayFor(model => model.TumorWidth)
-                        x
-                        @Html.DisplayFor(model => model.TumorHeight)
-                        x
-                        @Html.DisplayFor(model => model.TumorLength)
-                    </dd>
 
-                    @*<dt>
-                            @Html.DisplayNameFor(model => model.TumorHeight)
-                        </dt>
 
-                        <dd>
-                            @Html.DisplayFor(model => model.TumorHeight)
-                        </dd>
 
-                        <dt>
-                            @Html.DisplayNameFor(model => model.TumorLength)
-                        </dt>
 
-                        <dd>
-                            @Html.DisplayFor(model => model.TumorLength)
-                        </dd>*@
 
-                    <dt>
-                        Location
-                    </dt>
 
-                    <dd>
-                        @Html.DisplayFor(model => model.TumorLocation)
-                    </dd>
-                </dl>
-            </div>
-            <div class="col-md-6">
-                <dl class="dl-horizontal">
-                    <dt>
-                        Review of Systems
-                    </dt>
-                    <dd>
-                        ------------------------------
-                    </dd>
-                    <dt>
-                        @Html.DisplayNameFor(model => model.Constitutional)
-                    </dt>
 
-                    <dd>
 
-                        @Html.DisplayFor(model => model.Constitutional)
-                    </dd>
 
-                    <dt>
-                        @Html.DisplayNameFor(model => model.Respiratory)
-                    </dt>
+	@*Data is based on a statistical correlation with: Patient @target.patientID | @targetSimilarity | @targetEffect*@
+	<hr />
+	<div class="row">
+		<div class="col-md-6">
+			<dl class="dl-horizontal">
+				<dt>
+					Patient  Information
+				</dt>
+				<dd>
+					------------------------------
+				</dd>
 
-                    <dd>
-                        @Html.DisplayFor(model => model.Respiratory)
-                    </dd>
+				<dt>
+					@Html.DisplayNameFor(model => model.Sex)
+				</dt>
 
-                    <dt>
-                        @Html.DisplayNameFor(model => model.Cardiovascular)
-                    </dt>
+				<dd>
+					@Html.DisplayFor(model => model.Sex)
+				</dd>
 
-                    <dd>
-                        @Html.DisplayFor(model => model.Cardiovascular)
-                    </dd>
+				<dt>
+					@Html.DisplayNameFor(model => model.Married)
+				</dt>
 
-                    <dt>
-                        @Html.DisplayNameFor(model => model.Gastrointestinal)
-                    </dt>
+				<dd>
+					@Html.DisplayFor(model => model.Married)
+				</dd>
 
-                    <dd>
-                        @Html.DisplayFor(model => model.Gastrointestinal)
-                    </dd>
+				<dt>
+					@Html.DisplayNameFor(model => model.Age)
+				</dt>
 
-                    <dt>
-                        @Html.DisplayNameFor(model => model.Musculoskeletal)
-                    </dt>
+				<dd>
+					@Html.DisplayFor(model => model.Age)
+				</dd>
 
-                    <dd>
-                        @Html.DisplayFor(model => model.Musculoskeletal)
-                    </dd>
+				<dt>
+					Classification
+				</dt>
 
-                    <dt>
-                        @Html.DisplayNameFor(model => model.Integumentary)
-                    </dt>
+				<dd>
+					@Html.DisplayFor(model => model.HistologicalClassification)
+				</dd>
 
-                    <dd>
-                        @Html.DisplayFor(model => model.Integumentary)
-                    </dd>
+				<dt>
+					Grade (WHO)
+				</dt>
 
-                    <dt>
-                        @Html.DisplayNameFor(model => model.Neurologic)
-                    </dt>
+				<dd>
+					@Html.DisplayFor(model => model.HistologicalGrade)
+				</dd>
 
-                    <dd>
-                        @Html.DisplayFor(model => model.Neurologic)
-                    </dd>
+				<dt>
+					Tumor Size (WxHxL)
+				</dt>
 
-                    <dt>
-                        Exercise
-                    </dt>
+				<dd>
+					@Html.DisplayFor(model => model.TumorWidth)
+					x
+					@Html.DisplayFor(model => model.TumorHeight)
+					x
+					@Html.DisplayFor(model => model.TumorLength)
+				</dd>
 
-                    <dd>
-                        @Html.DisplayFor(model => model.Exercize)
-                    </dd>
+				@*<dt>
+						@Html.DisplayNameFor(model => model.TumorHeight)
+					</dt>
 
-                    <dt>
-                        @Html.DisplayNameFor(model => model.Diet)
-                    </dt>
+					<dd>
+						@Html.DisplayFor(model => model.TumorHeight)
+					</dd>
 
-                    <dd>
-                        @Html.DisplayFor(model => model.Diet)
-                    </dd>
-                </dl>
-            </div>
-        </div>
-        <dl class="dl-horizontal">
-            <dt>
-                Symptoms
-            </dt>
+					<dt>
+						@Html.DisplayNameFor(model => model.TumorLength)
+					</dt>
 
-            <dd>
-                <br />
-                @foreach (SymptomsPivot sp in Model.SymptomsPivots)
-                {
-                    @Html.DisplayFor(spitem => sp.PossibleSymptom.Name)
+					<dd>
+						@Html.DisplayFor(model => model.TumorLength)
+					</dd>*@
 
-                    if (sp.date != null)
-                    {
-                        <tag> // </tag>
-                        @Html.DisplayNameFor(spitem => sp.date)
-                        <tag>: </tag>
-                        @Html.DisplayFor(spitem => sp.date)
-                    }
-                    if (sp.frequency != null)
-                    {
-                        <tag> // </tag>
-                        @Html.DisplayNameFor(spitem => sp.frequency)
-                        <tag>: </tag>
-                        @Html.DisplayFor(spitem => sp.frequency)
-                    }
-                    if (sp.notes != null)
-                    {
-                        <tag> // </tag>
-                        @Html.DisplayNameFor(spitem => sp.notes)
-                        <tag>: </tag>
-                        @Html.DisplayFor(spitem => sp.notes)
-                    }
+				<dt>
+					Location
+				</dt>
 
-                    <br />
-                }
-                <br />
-            </dd>
+				<dd>
+					@Html.DisplayFor(model => model.TumorLocation)
+				</dd>
+			</dl>
+		</div>
+		<div class="col-md-6">
+			<dl class="dl-horizontal">
+				<dt>
+					Review of Systems
+				</dt>
+				<dd>
+					------------------------------
+				</dd>
+				<dt>
+					@Html.DisplayNameFor(model => model.Constitutional)
+				</dt>
 
-            <dt>
-                <br />
-                Other Medications
-            </dt>
 
-            <dd>
-                <br />
-                @foreach (OtherMedsPivot sp in Model.OtherMedsPivots)
-                {
-                    @Html.DisplayFor(spitem => sp.PossibleOtherMed.Name)
+				<dd>
 
-                    if (sp.date != null)
-                    {
-                        <tag> // </tag>
-                        @Html.DisplayNameFor(spitem => sp.date)
-                        <tag>: </tag>
-                        @Html.DisplayFor(spitem => sp.date)
-                    }
-                    if (sp.frequency != null)
-                    {
-                        <tag> // </tag>
-                        @Html.DisplayNameFor(spitem => sp.frequency)
-                        <tag>: </tag>
-                        @Html.DisplayFor(spitem => sp.frequency)
-                    }
-                    if (sp.notes != null)
-                    {
-                        <tag> // </tag>
-                        @Html.DisplayNameFor(spitem => sp.notes)
-                        <tag>: </tag>
-                        @Html.DisplayFor(spitem => sp.notes)
-                    }
-                    <br />
-                }
-                <br />
-            </dd>
+					@Html.DisplayFor(model => model.Constitutional)
+				</dd>
 
-            <dt>
-                <br />
-                Health Factors
-            </dt>
+				<dt>
+					@Html.DisplayNameFor(model => model.Respiratory)
+				</dt>
 
-            <dd>
-                <br />
-                @foreach (HealthFactorsPivot sp in Model.HealthFactorsPivots)
-                {
-                    @Html.DisplayFor(spitem => sp.PossibleHealthFactor.Name)
-                    if (sp.date != null)
-                    {
-                        <tag> // </tag>
-                        @Html.DisplayNameFor(spitem => sp.date)
-                        <tag>: </tag>
-                        @Html.DisplayFor(spitem => sp.date)
-                    }
-                    if (sp.frequency != null)
-                    {
-                        <tag> // </tag>
-                        @Html.DisplayNameFor(spitem => sp.frequency)
-                        <tag>: </tag>
-                        @Html.DisplayFor(spitem => sp.frequency)
-                    }
-                    if (sp.notes != null)
-                    {
-                        <tag> // </tag>
-                        @Html.DisplayNameFor(spitem => sp.notes)
-                        <tag>: </tag>
-                        @Html.DisplayFor(spitem => sp.notes)
-                    }
-                    <br />
-                }
-                <br />
-            </dd>
+				<dd>
+					@Html.DisplayFor(model => model.Respiratory)
+				</dd>
 
-            <dt>
-                <br />
-                Treatments Given
-            </dt>
+				<dt>
+					@Html.DisplayNameFor(model => model.Cardiovascular)
+				</dt>
 
-            <dd>
-                <br />
-                @foreach (TreatmentsPivot sp in Model.TreatmentsPivots)
-                {
-                    @Html.DisplayFor(spitem => sp.PossibleTreatment.Name)
-                    if (sp.date != null)
-                    {
-                        <tag> // </tag>
-                        @Html.DisplayNameFor(spitem => sp.date)
-                        <tag>: </tag>
-                        @Html.DisplayFor(spitem => sp.date)
-                    }
-                    if (sp.frequency != null)
-                    {
-                        <tag> // </tag>
-                        @Html.DisplayNameFor(spitem => sp.frequency)
-                        <tag>: </tag>
-                        @Html.DisplayFor(spitem => sp.frequency)
-                    }
-                    if (sp.notes != null)
-                    {
-                        <tag> // </tag>
-                        @Html.DisplayNameFor(spitem => sp.notes)
-                        <tag>: </tag>
-                        @Html.DisplayFor(spitem => sp.notes)
-                    }
-                    if (sp.effectiveness != null)
-                    {
-                        <tag> // </tag>
-                        @Html.DisplayNameFor(spitem => sp.effectiveness)
-                        <tag>: </tag>
-                        @Html.DisplayFor(spitem => sp.effectiveness)
-                    }
+				<dd>
+					@Html.DisplayFor(model => model.Cardiovascular)
+				</dd>
 
-                    <br />
-                }
-                <br />
-            </dd>
+				<dt>
+					@Html.DisplayNameFor(model => model.Gastrointestinal)
+				</dt>
 
-        </dl>
-    </div>
+				<dd>
+					@Html.DisplayFor(model => model.Gastrointestinal)
+				</dd>
+
+				<dt>
+					@Html.DisplayNameFor(model => model.Musculoskeletal)
+				</dt>
+
+				<dd>
+					@Html.DisplayFor(model => model.Musculoskeletal)
+				</dd>
+
+				<dt>
+					@Html.DisplayNameFor(model => model.Integumentary)
+				</dt>
+
+				<dd>
+					@Html.DisplayFor(model => model.Integumentary)
+				</dd>
+
+				<dt>
+					@Html.DisplayNameFor(model => model.Neurologic)
+				</dt>
+
+				<dd>
+					@Html.DisplayFor(model => model.Neurologic)
+				</dd>
+
+				<dt>
+					Exercise
+				</dt>
+
+				<dd>
+					@Html.DisplayFor(model => model.Exercize)
+				</dd>
+
+				<dt>
+					@Html.DisplayNameFor(model => model.Diet)
+				</dt>
+
+				<dd>
+					@Html.DisplayFor(model => model.Diet)
+				</dd>
+			</dl>
+		</div>
+	</div>
+	<dl class="dl-horizontal">
+		<dt>
+			Symptoms
+		</dt>
+
+		<dd>
+			<br />
+			@foreach (SymptomsPivot sp in Model.SymptomsPivots)
+			{
+				@Html.DisplayFor(spitem => sp.PossibleSymptom.Name)
+
+				if (sp.date != null)
+				{
+					<tag> // </tag>
+					@Html.DisplayNameFor(spitem => sp.date)
+					<tag>: </tag>
+					@Html.DisplayFor(spitem => sp.date)
+				}
+				if (sp.frequency != null)
+				{
+					<tag> // </tag>
+					@Html.DisplayNameFor(spitem => sp.frequency)
+					<tag>: </tag>
+					@Html.DisplayFor(spitem => sp.frequency)
+				}
+				if (sp.notes != null)
+				{
+					<tag> // </tag>
+					@Html.DisplayNameFor(spitem => sp.notes)
+					<tag>: </tag>
+					@Html.DisplayFor(spitem => sp.notes)
+				}
+
+				<br />
+			}
+			<br />
+		</dd>
+
+		<dt>
+			<br />
+			Other Medications
+		</dt>
+
+		<dd>
+			<br />
+			@foreach (OtherMedsPivot sp in Model.OtherMedsPivots)
+			{
+				@Html.DisplayFor(spitem => sp.PossibleOtherMed.Name)
+
+				if (sp.date != null)
+				{
+					<tag> // </tag>
+					@Html.DisplayNameFor(spitem => sp.date)
+					<tag>: </tag>
+					@Html.DisplayFor(spitem => sp.date)
+				}
+				if (sp.frequency != null)
+				{
+					<tag> // </tag>
+					@Html.DisplayNameFor(spitem => sp.frequency)
+					<tag>: </tag>
+					@Html.DisplayFor(spitem => sp.frequency)
+				}
+				if (sp.notes != null)
+				{
+					<tag> // </tag>
+					@Html.DisplayNameFor(spitem => sp.notes)
+					<tag>: </tag>
+					@Html.DisplayFor(spitem => sp.notes)
+				}
+				<br />
+			}
+			<br />
+		</dd>
+
+		<dt>
+			<br />
+			Health Factors
+		</dt>
+
+		<dd>
+			<br />
+			@foreach (HealthFactorsPivot sp in Model.HealthFactorsPivots)
+			{
+				@Html.DisplayFor(spitem => sp.PossibleHealthFactor.Name)
+				if (sp.date != null)
+				{
+					<tag> // </tag>
+					@Html.DisplayNameFor(spitem => sp.date)
+					<tag>: </tag>
+					@Html.DisplayFor(spitem => sp.date)
+				}
+				if (sp.frequency != null)
+				{
+					<tag> // </tag>
+					@Html.DisplayNameFor(spitem => sp.frequency)
+					<tag>: </tag>
+					@Html.DisplayFor(spitem => sp.frequency)
+				}
+				if (sp.notes != null)
+				{
+					<tag> // </tag>
+					@Html.DisplayNameFor(spitem => sp.notes)
+					<tag>: </tag>
+					@Html.DisplayFor(spitem => sp.notes)
+				}
+				<br />
+			}
+			<br />
+		</dd>
+
+		<dt>
+			<br />
+			Treatments Given
+		</dt>
+
+		<dd>
+			<br />
+			@foreach (TreatmentsPivot sp in Model.TreatmentsPivots)
+			{
+				@Html.DisplayFor(spitem => sp.PossibleTreatment.Name)
+				if (sp.date != null)
+				{
+					<tag> // </tag>
+					@Html.DisplayNameFor(spitem => sp.date)
+					<tag>: </tag>
+					@Html.DisplayFor(spitem => sp.date)
+				}
+				if (sp.frequency != null)
+				{
+					<tag> // </tag>
+					@Html.DisplayNameFor(spitem => sp.frequency)
+					<tag>: </tag>
+					@Html.DisplayFor(spitem => sp.frequency)
+				}
+				if (sp.notes != null)
+				{
+					<tag> // </tag>
+					@Html.DisplayNameFor(spitem => sp.notes)
+					<tag>: </tag>
+					@Html.DisplayFor(spitem => sp.notes)
+				}
+				if (sp.effectiveness != null)
+				{
+					<tag> // </tag>
+					@Html.DisplayNameFor(spitem => sp.effectiveness)
+					<tag>: </tag>
+					@Html.DisplayFor(spitem => sp.effectiveness)
+				}
+
+				<br />
+			}
+			<br />
+		</dd>
+
+	</dl>
+</div>
 
 }
 else
