--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Index.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Index.cshtml
@@ -85,7 +85,7 @@
                         Grade (WHO)
                     </th>
                     <th>
-                        Tumor Size
+                        Tumor Size (mm)
                     </th>
                     <th>
                         Location
