--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Shared/_Layout.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Shared/_Layout.cshtml
@@ -81,3 +81,8 @@
     @RenderSection("scripts", required: false)
 </body>
 </html>
+<style>
+    body {
+        background: #89cdce;
+    }
+</style>
