--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/PossibleSymptoms/Edit.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/PossibleSymptoms/Edit.cshtml
@@ -14,7 +14,7 @@
     if (ViewBag.displayMenu == "Yes")
     {
 
-        @using (Html.BeginForm())
+        using (Html.BeginForm())
         {
             @Html.AntiForgeryToken()
 
