--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Results.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Results.cshtml
@@ -126,7 +126,7 @@
 		</h4>
 		We recommend the following treatments:
 		@Html.DisplayFor(i => i.comparisonResults)
-		&nbsp;&nbsp;@ViewBag.TargetData[0]
+		&nbsp;&nbsp;@ViewBag.SimData[0]
 		@*Chart Printed Out on Results Page Showing the Current Patient's Level of Similarity to Other Patients in the Database*@
 		<div id="chartdiv" style="width: 100%; height: 400px; background-color: #FFFFFF;"></div>
 
