--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Results.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Results.cshtml
@@ -79,33 +79,33 @@
 			],
 			"dataProvider": [
 				{
-					"category": "Patient 1",
-					"column-1": "80"
+                    "category": "Patient " + @ViewBag.SimData[0],
+                    "column-1": @ViewBag.SimData[1]
 				},
 				{
-					"category": "Patient 2",
-					"column-1": "60"
+                    "category": "Patient " + @ViewBag.SimData[2],
+                    "column-1": @ViewBag.SimData[3]
 				},
 				{
-					"category": "Patient 3",
-					"column-1": "20"
+                    "category": "Patient " + @ViewBag.SimData[4],
+                    "column-1": @ViewBag.SimData[5]
 				},
 				{
-					"category": "Patient 4",
-					"column-1": "10"
+                    "category": "Patient " + @ViewBag.SimData[6],
+                    "column-1": @ViewBag.SimData[7]
 				},
 				{
-					"category": "Patient 5",
-					"column-1": "20"
+                    "category": "Patient " + @ViewBag.SimData[8],
+                    "column-1": @ViewBag.SimData[9]
 				},
 				{
-					"category": "Patient 6",
-					"column-1": "30"
+                    "category": "Patient " + @ViewBag.SimData[10],
+                    "column-1": @ViewBag.SimData[11]
 				},
 				{
-					"category": "Patient 7",
-					"column-1": "60"
-				}
+                    "category": "Patient " + @ViewBag.SimData[12],
+                    "column-1": @ViewBag.SimData[13]
+				}//Just first 7 patients for now but is dynamic
 			]
 		}
 	);
