Added final two patients because we could. Will have to try and make this dynamic later.

--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Results.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Results.cshtml
@@ -103,7 +103,15 @@
 				{
                     "category": "Patient " + @ViewBag.SimData[12],
                     "column-1": @ViewBag.SimData[13]
-				}//Just first 7 patients for now but is dynamic
+				},
+                {
+                    "category": "Patient " + @ViewBag.SimData[14],
+                    "column-1": @ViewBag.SimData[15] //Just first 7 patients for now but is dynamic
+                },
+                {
+                    "category": "Patient " + @ViewBag.SimData[16],
+                    "column-1": @ViewBag.SimData[17] //Just first 7 patients for now but is dynamic
+                }
 			]
 		}
 	);
