--- a/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Results.cshtml
+++ b/TumorTaskforce_Webapp_1/TumorTaskforce_Webapp_1/Views/Patients/Results.cshtml
@@ -123,7 +123,7 @@
 			Results:
 		</h4>
 		We recommend the following treatments:
-		@Html.DisplayFor(i => i.comparisonResults)
+		@ViewBag.CompResults
 		@*Chart Printed Out on Results Page Showing the Current Patient's Level of Similarity to Other Patients in the Database*@
 		<div id="chartdiv" style="width: 100%; height: 400px; background-color: #FFFFFF;"></div>
 
